[gd_scene load_steps=7 format=3 uid="uid://yeqtxei3s51k"]

[ext_resource type="Script" uid="uid://dyodvuu0u0l4g" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://fu4l6qebd41q" path="res://lobby.tscn" id="2_h2yge"]
[ext_resource type="PackedScene" uid="uid://dh7d7sn5vvvue" path="res://multiplayer_processing.tscn" id="3_1bvp3"]
[ext_resource type="Script" uid="uid://c752ago5p6ngl" path="res://hud.gd" id="4_1bvp3"]
[ext_resource type="Script" uid="uid://drjpb7tu5rlvd" path="res://multiplayer_tasks.gd" id="4_lquwl"]
[ext_resource type="Script" uid="uid://bu3so18sk52lk" path="res://menu_hud.gd" id="6_7mycd"]

[node name="Main" type="Node"]
script = ExtResource("1_ig7tw")

[node name="Lobby" parent="." instance=ExtResource("2_h2yge")]

[node name="Multiplayer_Processing" parent="." instance=ExtResource("3_1bvp3")]

[node name="Multiplayer_Tasks" type="Node" parent="."]
script = ExtResource("4_lquwl")

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("4_1bvp3")

[node name="Host_Game" type="Button" parent="HUD"]
offset_left = 152.0
offset_top = 127.0
offset_right = 427.0
offset_bottom = 204.0
theme_override_font_sizes/font_size = 50
text = "Host Game"

[node name="Join_Game" type="Button" parent="HUD"]
offset_left = 633.0
offset_top = 125.0
offset_right = 887.0
offset_bottom = 202.0
theme_override_font_sizes/font_size = 50
text = "Join Game
"

[node name="Start_Game" type="Button" parent="HUD"]
offset_left = 47.0
offset_top = 298.0
offset_right = 327.0
offset_bottom = 375.0
theme_override_font_sizes/font_size = 50
text = "Start Game"

[node name="Chill_Mode_Start" type="Button" parent="HUD"]
offset_left = 52.0
offset_top = 573.0
offset_right = 450.0
offset_bottom = 650.0
theme_override_font_sizes/font_size = 50
text = "Chill Game Start"

[node name="ReturnToTitlePage" type="Button" parent="HUD"]
offset_left = 288.0
offset_top = 459.0
offset_right = 771.0
offset_bottom = 536.0
theme_override_font_sizes/font_size = 50
text = "Return to Title Page"

[node name="IP" type="LineEdit" parent="HUD"]
offset_left = 435.0
offset_top = 295.0
offset_right = 712.0
offset_bottom = 358.0
theme_override_font_sizes/font_size = 40
text = "localhost"
placeholder_text = "IP"

[node name="Port" type="LineEdit" parent="HUD"]
offset_left = 840.0
offset_top = 294.0
offset_right = 1000.0
offset_bottom = 357.0
theme_override_font_sizes/font_size = 40
text = "8080"
placeholder_text = "Port"

[node name="WaitingToStart" type="Label" parent="HUD"]
offset_left = 368.0
offset_top = 376.0
offset_right = 713.0
offset_bottom = 431.0
theme_override_font_sizes/font_size = 40
text = "Waiting to Start ..."

[node name="MenuHUD" type="CanvasLayer" parent="."]
script = ExtResource("6_7mycd")

[node name="MainMenu" type="Control" parent="MenuHUD"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Mouse_Blocker" type="Control" parent="MenuHUD/MainMenu"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Close" type="Button" parent="MenuHUD/MainMenu"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="Settings" type="Button" parent="MenuHUD/MainMenu"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="Quit" type="Button" parent="MenuHUD/MainMenu"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="Settings" type="Control" parent="MenuHUD"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Back" type="Button" parent="MenuHUD/Settings"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[connection signal="player_connected" from="Lobby" to="." method="add_player"]
[connection signal="player_disconnected" from="Lobby" to="." method="player_disconnected"]
[connection signal="server_disconnected" from="Lobby" to="." method="server_disconnected"]
[connection signal="upon_join" from="Lobby" to="." method="upon_join"]
[connection signal="pressed" from="HUD/Host_Game" to="." method="host_game"]
[connection signal="pressed" from="HUD/Join_Game" to="." method="join_game"]
[connection signal="pressed" from="HUD/Start_Game" to="." method="start_game_normal_button"]
[connection signal="pressed" from="HUD/Chill_Mode_Start" to="." method="start_game_chill_button"]
[connection signal="pressed" from="HUD/ReturnToTitlePage" to="." method="return_to_title_page"]
[connection signal="pressed" from="MenuHUD/MainMenu/Close" to="MenuHUD" method="close_pressed"]
[connection signal="pressed" from="MenuHUD/MainMenu/Settings" to="MenuHUD" method="_on_settings_pressed"]
[connection signal="pressed" from="MenuHUD/Settings/Back" to="MenuHUD" method="settings_back_pressed"]
